// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combo box (Association) adds new item to inital selected item 1`] = `
<div>
  <div
    class="widget-combobox"
  >
    <div
      aria-controls="downshift-12-menu"
      aria-expanded="true"
      class="form-control widget-combobox-input-container widget-combobox-input-container-active"
      id="downshift-12-toggle-button"
      tabindex="-1"
    >
      <div
        class="widget-combobox-selected-items widget-combobox-text"
      >
        <input
          aria-activedescendant="downshift-12-item-1"
          aria-autocomplete="list"
          aria-controls="downshift-12-menu"
          aria-expanded="true"
          aria-labelledby="comboBox1-label"
          autocomplete="off"
          class="widget-combobox-input"
          id="comboBox1"
          placeholder=" "
          role="combobox"
          value=""
        />
        <div
          class="widget-combobox-placeholder-text"
        >
          111
        </div>
      </div>
      <button
        aria-label="Clear selection"
        class="widget-combobox-clear-button"
      >
        <span
          class="widget-combobox-icon-container"
        >
          <svg
            class="widget-combobox-clear-button-icon"
            height="14"
            viewBox="0 0 32 32"
            width="14"
          >
            <path
              d="M27.71 5.71004L26.29 4.29004L16 14.59L5.71004 4.29004L4.29004 5.71004L14.59 16L4.29004 26.29L5.71004 27.71L16 17.41L26.29 27.71L27.71 26.29L17.41 16L27.71 5.71004Z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <div
        class="widget-combobox-down-arrow"
      >
        <span
          class="widget-combobox-icon-container"
        >
          <svg
            class="widget-combobox-down-arrow-icon mx-icon-lined mx-icon-chevron-down active"
            height="16"
            viewBox="0 0 32 32"
            width="16"
          >
            <path
              d="M16 23.41L4.29004 11.71L5.71004 10.29L16 20.59L26.29 10.29L27.71 11.71L16 23.41Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="widget-combobox-menu"
    >
      <ul
        aria-labelledby="comboBox1-label"
        class="widget-combobox-menu-list"
        id="downshift-12-menu"
        role="listbox"
      >
        <li
          aria-selected="true"
          class="widget-combobox-item widget-combobox-item-selected"
          id="downshift-12-item-0"
          role="option"
        >
          <span
            class="widget-combobox-icon-container"
          >
            <input
              checked=""
              id="comboBox1_111"
              tabindex="-1"
              type="checkbox"
            />
          </span>
          <label
            class="widget-combobox-caption-text"
            for="comboBox1_111"
          >
            111
          </label>
        </li>
        <li
          aria-selected="false"
          class="widget-combobox-item widget-combobox-item-highlighted"
          id="downshift-12-item-1"
          role="option"
        >
          <span
            class="widget-combobox-icon-container"
          >
            <input
              id="comboBox1_222"
              tabindex="-1"
              type="checkbox"
            />
          </span>
          <label
            class="widget-combobox-caption-text"
            for="comboBox1_222"
          >
            222
          </label>
        </li>
        <li
          aria-selected="false"
          class="widget-combobox-item"
          id="downshift-12-item-2"
          role="option"
        >
          <span
            class="widget-combobox-icon-container"
          >
            <input
              id="comboBox1_333"
              tabindex="-1"
              type="checkbox"
            />
          </span>
          <label
            class="widget-combobox-caption-text"
            for="comboBox1_333"
          >
            333
          </label>
        </li>
        <li
          aria-selected="false"
          class="widget-combobox-item"
          id="downshift-12-item-3"
          role="option"
        >
          <span
            class="widget-combobox-icon-container"
          >
            <input
              id="comboBox1_444"
              tabindex="-1"
              type="checkbox"
            />
          </span>
          <label
            class="widget-combobox-caption-text"
            for="comboBox1_444"
          >
            444
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combo box (Association) renders combobox widget 1`] = `
<div>
  <div
    class="widget-combobox"
  >
    <div
      aria-controls="downshift-0-menu"
      aria-expanded="false"
      class="form-control widget-combobox-input-container"
      id="downshift-0-toggle-button"
      tabindex="-1"
    >
      <div
        class="widget-combobox-selected-items widget-combobox-text"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-0-menu"
          aria-expanded="false"
          aria-labelledby="comboBox1-label"
          autocomplete="off"
          class="widget-combobox-input"
          id="comboBox1"
          placeholder=" "
          role="combobox"
          value=""
        />
        <div
          class="widget-combobox-placeholder-text"
        >
          111
        </div>
      </div>
      <button
        aria-label="Clear selection"
        class="widget-combobox-clear-button"
      >
        <span
          class="widget-combobox-icon-container"
        >
          <svg
            class="widget-combobox-clear-button-icon"
            height="14"
            viewBox="0 0 32 32"
            width="14"
          >
            <path
              d="M27.71 5.71004L26.29 4.29004L16 14.59L5.71004 4.29004L4.29004 5.71004L14.59 16L4.29004 26.29L5.71004 27.71L16 17.41L26.29 27.71L27.71 26.29L17.41 16L27.71 5.71004Z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <div
        class="widget-combobox-down-arrow"
      >
        <span
          class="widget-combobox-icon-container"
        >
          <svg
            class="widget-combobox-down-arrow-icon mx-icon-lined mx-icon-chevron-down"
            height="16"
            viewBox="0 0 32 32"
            width="16"
          >
            <path
              d="M16 23.41L4.29004 11.71L5.71004 10.29L16 20.59L26.29 10.29L27.71 11.71L16 23.41Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="widget-combobox-menu widget-combobox-menu-hidden"
    >
      <ul
        aria-labelledby="comboBox1-label"
        class="widget-combobox-menu-list"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;
